--- a/styles/style.css
+++ b/styles/style.css
@@ -10,16 +10,117 @@
 }
 
 .header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
+  display: flex;
+    min-height: 600px;
+    max-height: 756px;
+    height: 100vh;
+    background:  #f2f2f2;
+    border: 1px solid red;
+    margin: 0;
+    box-sizing: border-box;
+    position: relative;
+    align-items: center;
   /* выше установили ограничения для секции */
 }
+.logo {
+  border: 1px solid red;
+  width: 228px;
+  height: 32px;
+  background-size: cover;
+  z-index: 1;
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+}
+.logo_place_header {
+  border: 1px solid red;
+  position:absolute;
+  top:30px;
+  left: 64px;
+}
+
+.header__title {
+  border: 1px solid red;
+  width: 730px;
+  padding-left: 64px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+}
+
+.header__subtitle {
+  border: 1px solid red;
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+a {
+  color:  #2f80ed;
+  text-decoration: none;
+}
+
+.header__link {
+
+}
+
+.header__main-illustration {
+border: 1px solid red;
+width: 765px;
+height: 608px;
+position: absolute;
+bottom: 0;
+right: 0;
+background-size: cover;
+z-index: 3;
+}
 .header__square-pic {
-  height: 568px;
+  border: 1px solid red;
   width: 568px;
+  height: 568px;
+  background-color:  #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 2;
+
+}
+.content {
+  border: 1px solid red;
+
+}
+
+.descripthion {
+  border: 1px solid red;
+
+
+
+}
+.two-columns {
+  margin-bottom: 100px;
+  margin-top: 100px;
+  border: 1px solid red;
+  width: 80%;
+  display: flex;
+  justify-content:space-between;
+  align-items: stretch;
+  position: relative;
+  box-sizing: border-box;
+  align-items:flex-start;
+
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1,2;
+}
+.two-cilumns__main-text {
+  width: 80%;
+  min-width: 784px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
