--- a/styles/style.css
+++ b/styles/style.css
@@ -15,39 +15,37 @@
     max-height: 756px;
     height: 100vh;
     background:  #f2f2f2;
-    border: 1px solid red;
     margin: 0;
     box-sizing: border-box;
     position: relative;
     align-items: center;
   /* выше установили ограничения для секции */
 }
+
 .logo {
-  border: 1px solid red;
   width: 228px;
   height: 32px;
   background-size: cover;
   z-index: 1;
-
 }
+
 .logo_place_header {
-  border: 1px solid red;
   position:absolute;
   top:30px;
   left: 64px;
 }
 
 .header__title {
-  border: 1px solid red;
   width: 730px;
+  margin: 0;
   padding-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
+  z-index: 4;
 }
 
 .header__subtitle {
-  border: 1px solid red;
   width: 388px;
   position: absolute;
   bottom: 30px;
@@ -56,27 +54,26 @@
   font-size: 18px;
   font-weight: normal;
 }
+
 a {
   color:  #2f80ed;
   text-decoration: none;
 }
 
 .header__link {
-
 }
 
 .header__main-illustration {
-border: 1px solid red;
-width: 765px;
-height: 608px;
-position: absolute;
-bottom: 0;
-right: 0;
-background-size: cover;
-z-index: 3;
+ width: 765px;
+ height: 608px;
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ background-size: cover;
+ z-index: 3;
 }
+
 .header__square-pic {
-  border: 1px solid red;
   width: 568px;
   height: 568px;
   background-color:  #2f80ed;
@@ -84,31 +81,21 @@ z-index: 3;
   top: 64px;
   right: 0;
   z-index: 2;
-
 }
+
 .content {
-  border: 1px solid red;
 
 }
 
 .descripthion {
-  border: 1px solid red;
-
-
-
+  margin: 0;
 }
+
 .two-columns {
-  margin-bottom: 100px;
-  margin-top: 100px;
-  border: 1px solid red;
+  margin: 100px auto;
   width: 80%;
   display: flex;
   justify-content:space-between;
-  align-items: stretch;
-  position: relative;
-  box-sizing: border-box;
-  align-items:flex-start;
-
 }
 
 .two-columns__brief {
@@ -116,17 +103,270 @@ z-index: 3;
   color: #2f80ed;
   font-size: 18px;
   font-weight: normal;
-  line-height: 1,2;
+  line-height: 1.2;
+  margin: 0;
 }
+
 .two-cilumns__main-text {
   width: 80%;
   min-width: 784px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+ line-height: 34px;
+ font-size: 24px;
+ font-weight: 600;
+}
+
+.digits {
+
+}
+
+.section-title {
+  margin: 100px auto 20px;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  width: 1100px;
+  margin: 0 auto 100px;
+  padding: 0;
+}
+
+ .table__cell {
+  width: 250px;
+  margin:0;
+  margin-top: 60px;}
+
+ .table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+ }
+
+ .table__text {
+  margin: 20px 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+ }
+
+ .table__text:last-of-type {
+  margin: 0;
+ }
+
+  .feynman {
+  background:  #f2f2f2;
+  height: 890px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  }
+
+  .feynman__title {
+  width: 648px;
+  margin: 100px auto 70px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  z-index: 2;
+  }
+
+  .feynman__subtitle {
+  margin: 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 3;
+  }
+
+ .feynman__link {
+  position: absolute;
+  top:50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+ }
+
+ .feyman__image {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+ }
+
+.kaufman {
+  background:#1f1f1f;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  position: relative;
+}
+
+.section-title_them_dark {
+  color: white;
+  margin: 90px auto 20px;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  z-index: 3;
+}
+
+.section-subtitle_them_dark {
+  color: white;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table_them_dark {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  width: 1100px;
+  margin: 80px auto 0;
+  padding: 0;
+  z-index: 2;
+}
+
+.table__cell_them_dark {
   width: 200px;
   color: white;
   margin-right: 0;
-  margin-top: 80px;
+  margin:0;
 }
+
+.table__heading_them_dark {
+  color: white;
+  margin: 0 auto 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text_them_dark {
+  margin:0 auto 80px;
+  color: white;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  z-index: 1;
+  position: absolute;
+  right: -255px;
+  top:0;
+}
+
+.footer {
+  background: #1f1f1f;
+  color: white;
+  min-height: 350px;
+  display: flex;
+}
+
+.footer__columns {
+  margin: 60px auto 40px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content:space-between ;
+}
+
+.logo_place_footer {
+  width: 228px;
+  height: 32px;
+
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0 18px;
+}
+
+.footer__column_content_info {
+
+}
+
+.footer__column-heading {
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+ .footer__column-links {
+  list-style: none;
+  padding: 0;
+  margin: 20px auto 16px;
+ }
+
+.footer__column_content_social {
+
+}
+
+.footer__social-icon {
+width: 16px;
+height: 16px;
+}
+
+.footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
