--- a/styles/style.css
+++ b/styles/style.css
@@ -55,12 +55,9 @@
   font-weight: normal;
 }
 
-a {
+.header__link {
   color:  #2f80ed;
   text-decoration: none;
-}
-
-.header__link {
 }
 
 .header__main-illustration {
@@ -107,7 +104,7 @@ a {
   margin: 0;
 }
 
-.two-cilumns__main-text {
+.two-columns__main-text {
   width: 80%;
   min-width: 784px;
 }
@@ -160,12 +157,13 @@ a {
   width: 1100px;
   margin: 0 auto 100px;
   padding: 0;
-}
+ }
 
  .table__cell {
   width: 250px;
   margin:0;
-  margin-top: 60px;}
+  margin-top: 60px;
+ }
 
  .table__heading {
   line-height: 1.15;
@@ -182,11 +180,11 @@ a {
 
  .table__text:last-of-type {
   margin: 0;
- }
+  }
 
   .feynman {
   background:  #f2f2f2;
-  height: 890px;
+  min-height: 890px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -218,9 +216,12 @@ a {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
+
  }
 
- .feyman__image {
+ .feynman__image {
   width: 867px;
   height: 637px;
   position: absolute;
@@ -231,75 +232,52 @@ a {
 
 .kaufman {
   background:#1f1f1f;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
   position: relative;
+  color: white;
 }
 
-.section-title_them_dark {
+.section-title_theme_dark {
   color: white;
+  margin: 0;
   margin: 90px auto 20px;
-  width: 60%;
-  text-align: center;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-  z-index: 3;
+  z-index: 1;
 }
 
-.section-subtitle_them_dark {
-  color: white;
-  width: 60%;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
+.section-subtitle_theme_dark {
+  margin: 0 auto 0;
+  z-index: 1;
 }
 
-.table_them_dark {
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  list-style: none;
-  width: 1100px;
-  margin: 80px auto 0;
+.table_theme_dark {
+  margin: 0;
   padding: 0;
   z-index: 2;
+  margin: 0 auto 90px;
 }
 
-.table__cell_them_dark {
+.table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
-  margin:0;
+  margin:80px auto 0;
+  z-index: 1;
 }
 
-.table__heading_them_dark {
-  color: white;
+.table__heading_theme_dark {
   margin: 0 auto 20px;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.table__text_them_dark {
-  margin:0 auto 80px;
-  color: white;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
-  z-index: 1;
+  z-index: 0;
   position: absolute;
-  right: -255px;
+  right: -240px;
   top:0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .footer {
@@ -320,14 +298,12 @@ a {
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
-  align-items: baseline;
   justify-content:space-between;
 }
 
 .logo_place_footer {
   width: 228px;
   height: 32px;
-
 }
 
 .footer__author {
@@ -338,11 +314,14 @@ a {
 }
 
 .footer__column_content_info {
-
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
 }
 
 .footer__column-heading {
   margin: 0;
+  padding: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
@@ -351,16 +330,19 @@ a {
  .footer__column-links {
   list-style: none;
   padding: 0;
-  margin: 20px auto 16px;
+  margin: 20px 0 16px;
  }
 
 .footer__column_content_social {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .footer__social-icon {
-width: 16px;
-height: 16px;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
 
 .footer__column-link {
@@ -368,5 +350,6 @@ height: 16px;
   font-size: 18px;
   font-weight: normal;
   color: white;
+  text-decoration: none;
 }
 
